Добавил возможность изменять пароль.
