# docs/swagger.json
@@ -1271,6 +1271,10 @@
                 "name": {
                     "type": "string",
                     "example": "Ivan"
+                },
+                "password": {
+                    "type": "string",
+                    "example": "qwerty123"
                 }
             }
         },
